# remote_audio

./: .gitignore  README.md  setup.cfg  setup.py
sandbox/: README.md  pyaudio.py  try_buffer_io.py  try_ffmpeg.py  try_ffmpeg_stream.py  try_remote.py  try_requests.py
src/remote_audio/: __init__.py  api.py  audio.py  classes.py  device.py  exceptions.py  shell.py  stream.py
src/remote_audio/io/: __init__.py  advanced_io.py  base_io.py  classes.py  conversion.py  file.py  http.py
src/remote_audio/io/ffmpeg/: README.md  __init__.py  classes.py  command.py  formats.py  io_devices.py  io_protocol.py  main_options.py  stream_specifier.py
src/remote_audio/io/ffmpeg/test/: test_ffmpeg.py
