[metadata]
name = remote_audio
version = 0.0.1

[options]
package_dir=
    =src
packages = find:
install_requires =
    shell @ git+https://github.com/denwong47/shell
    requests >= 2.25.1
    PyAudio >= 0.2
    # Also requires:
    #   portaudio
    #   espeak (for Linux)
    #   ffmpeg
python_requires = >=3.8

[options.packages.find]
where=src

[options.extras_require]
test = quicktest @ git+https://github.com/denwong47/quicktest